# kiwi_orb_slam2

./: .gitignore  README.md  frames.gv
csvs/: Visualize.ipynb  Visualize_groundTruth.ipynb  imu_odom.csv  imu_odom1_groundTruth.csv  imu_odom2_groundTruth.csv  orb_odom.csv  orb_odom1_groundTruth.csv  orb_odom2_groundTruth.csv  orb_odomcrop120.csv
orb_slam2_lib/: CMakeLists.txt
orb_slam2_lib/src/: System.cc
orb_slam2_ros/: CMakeLists.txt  FrameTrajectory_KITTI_Format.txt  FrameTrajectory_TUM_Format.txt  KeyFrameTrajectory_TUM_Format.txt
orb_slam2_ros/launch/: realsense_stereo.launch  stereo.launch  stereoZED.launch  stereo_cropped.launch
orb_slam2_ros/settings/: StereokiwiVisionCropped.yaml  StereokiwiVisionFull2.yaml  StereokiwiVisionFull3.yaml  ZedStereoVGA.yaml
orb_slam2_ros/src/: ROSPublisher.cpp  easy_memmap.cpp  easy_memmap.h  odom_node.py  ros_stereo.cc
